--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FriendFinder",
+  "name": "FindFriends",
   "private": true,
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -31,15 +31,8 @@
     "npm": "6.10.10",
     "node": "v6.4.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TWSummer/FriendFinder.git"
-  },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/TWSummer/FriendFinder/issues"
-  },
-  "homepage": "https://github.com/TWSummer/FriendFinder#readme"
-}
